[tool.poetry]
name = "memory-hackathon"
version = "0.1.0"
description = ""
authors = ["leehanchung <lee.hanchung@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
openai = "^1.16.2"
langchain = "^0.1.14"
python-dotenv = "^1.0.1"
langmem = "^0.0.2"
anthropic = "^0.23.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.3.5"
pytest = "^8.1.1"
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
